Renew token (#1)
* added token renewal functionality

* updated API docs
